--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -181,7 +181,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player4')" id="player4-item">
-      <div class="player-name">Infante</div>
+      <div class="player-name">Luisja</div>
       <div class="player-stats" id="player4-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -193,7 +193,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player5')" id="player5-item">
-      <div class="player-name">Jacobo</div>
+      <div class="player-name">Martínez</div>
       <div class="player-stats" id="player5-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -217,7 +217,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player7')" id="player7-item">
-      <div class="player-name">Rodri</div>
+      <div class="player-name">Jacobo</div>
       <div class="player-stats" id="player7-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -229,7 +229,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player8')" id="player8-item">
-      <div class="player-name">Adriano</div>
+      <div class="player-name">Rodri</div>
       <div class="player-stats" id="player8-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -241,7 +241,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player9')" id="player9-item">
-      <div class="player-name">Alfonso</div>
+      <div class="player-name">Adriano</div>
       <div class="player-stats" id="player9-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -253,7 +253,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player10')" id="player10-item">
-      <div class="player-name">Zarcero</div>
+      <div class="player-name">Infante</div>
       <div class="player-stats" id="player10-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -265,7 +265,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player11')" id="player11-item">
-      <div class="player-name">Luisja</div>
+      <div class="player-name">Molina</div>
       <div class="player-stats" id="player11-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -277,7 +277,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player12')" id="player12-item">
-      <div class="player-name">Víctor Jaén</div>
+      <div class="player-name">Lucas Lausín</div>
       <div class="player-stats" id="player12-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -289,7 +289,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player13')" id="player13-item">
-      <div class="player-name">Mario</div>
+      <div class="player-name">Zarcero</div>
       <div class="player-stats" id="player13-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -301,7 +301,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player14')" id="player14-item">
-      <div class="player-name">Pablo</div>
+      <div class="player-name">Kito</div>
       <div class="player-stats" id="player14-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -313,7 +313,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player15')" id="player15-item">
-      <div class="player-name">Brito</div>
+      <div class="player-name">Víctor Jaén</div>
       <div class="player-stats" id="player15-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -325,7 +325,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player16')" id="player16-item">
-      <div class="player-name">Kito</div>
+      <div class="player-name">Brito</div>
       <div class="player-stats" id="player16-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -337,7 +337,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player17')" id="player17-item">
-      <div class="player-name">Javi Pardo</div>
+      <div class="player-name">Pablo</div>
       <div class="player-stats" id="player17-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -349,7 +349,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player18')" id="player18-item">
-      <div class="player-name">Ogayar</div>
+      <div class="player-name">Javi Pardo</div>
       <div class="player-stats" id="player18-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -361,7 +361,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player19')" id="player19-item">
-      <div class="player-name">Panizo</div>
+      <div class="player-name">Mario</div>
       <div class="player-stats" id="player19-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -373,7 +373,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player20')" id="player20-item">
-      <div class="player-name">Manu Medina</div>
+      <div class="player-name">Ogayar</div>
       <div class="player-stats" id="player20-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -385,7 +385,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player21')" id="player21-item">
-      <div class="player-name">Martínez</div>
+      <div class="player-name">Rodri de Castro</div>
       <div class="player-stats" id="player21-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -396,7 +396,7 @@
       </div>
     </li>
     <li class="player-item" onclick="toggleDetails('player22')" id="player22-item">
-      <div class="player-name">Lucas Lausín</div>
+      <div class="player-name">Panizo</div>
       <div class="player-stats" id="player22-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -407,7 +407,7 @@
       </div>
     </li>
     <li class="player-item" onclick="toggleDetails('player23')" id="player23-item">
-      <div class="player-name">Griñán</div>
+      <div class="player-name">Manu Medina</div>
       <div class="player-stats" id="player23-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -428,13 +428,11 @@
         <!-- Aquí se mostrarán todas las puntuaciones -->
       </div>
     </li>
-    <!--
     <li class="player-item" onclick="toggleDetails('player25')" id="player25-item">
-      <div class="player-name">AAA</div>
+      <div class="player-name">Griñán</div>
       <div class="player-stats" id="player25-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
-  <!--
       <div class="total-points" id="player25-total">Total: 0 puntos - Media: 0.00</div>
       <div id="player25" class="player-details">
         <h3>Puntuaciones Detalladas</h3>
@@ -494,7 +492,7 @@
     },
     {
       id: 'player4',
-      name: 'Infante',
+      name: 'Luisja',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -505,7 +503,7 @@
     },
     {
       id: 'player5',
-      name: 'Jacobo',
+      name: 'Martínez',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -527,7 +525,7 @@
     },
     {
       id: 'player7',
-      name: 'Rodri',
+      name: 'Jacobo',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -538,7 +536,7 @@
     },
     {
       id: 'player8',
-      name: 'Adriano',
+      name: 'Rodri',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -549,7 +547,7 @@
     },
     {
       id: 'player9',
-      name: 'Alfonso',
+      name: 'Adriano',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -560,7 +558,7 @@
     },
     {
       id: 'player10',
-      name: 'Zarcero',
+      name: 'Infante',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -571,7 +569,7 @@
     },
     {
       id: 'player11',
-      name: 'Luisja',
+      name: 'Molina',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -582,116 +580,6 @@
     },
     {
       id: 'player12',
-      name: 'Víctor Jaén',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player13',
-      name: 'Mario',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player14',
-      name: 'Pablo',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player15',
-      name: 'Brito',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player16',
-      name: 'Kito',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player17',
-      name: 'Javi Pardo',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player18',
-      name: 'Ogayar',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player19',
-      name: 'Panizo',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player20',
-      name: 'Manu Medina',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player21',
-      name: 'Martínez',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player22',
       name: 'Lucas Lausín',
       scores: [null, null, null],
       comments: [
@@ -702,8 +590,118 @@
       ]
     },
     {
+      id: 'player13',
+      name: 'Zarcero',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player14',
+      name: 'Kito',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player15',
+      name: 'Víctor Jaén',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player16',
+      name: 'Brito',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player17',
+      name: 'Pablo',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player18',
+      name: 'Javi Pardo',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player19',
+      name: 'Mario',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player20',
+      name: 'Ogayar',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player21',
+      name: 'Rodri de Castro',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player22',
+      name: 'Panizo',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
       id: 'player23',
-      name: 'Griñán',
+      name: 'Manu Medina',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -725,7 +723,7 @@
     },
     {
       id: 'player25',
-      name: 'AAA',
+      name: 'Griñán',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
