--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -133,6 +133,7 @@
 <script>
   // Datos de los jugadores con los minutos jugados en cada partido
   const jugadores = [
+    {nombre: "Prueba para mostrar función", goles: 11, asistencias: 3, minutos: [66, 33, 90, 0, 22]},
     {nombre: "Agudo", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Gabri", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: []},
