--- a/index.html
+++ b/index.html
@@ -149,6 +149,38 @@
 </a>
 
 
+  <div style="padding: 10px; float: left; width: 45%; text-align: center;">
+  <a
+    href="https://sofifa.com/user/36295111/players"
+    target="_blank">
+    <img alt="FIFA"
+         class="imagen"
+         src="FIFA26.jpg"
+         width="400" height="400"></a></div>
+<div style="padding: 10px; float: right; width: 45%; text-align: center;">
+  <a
+    href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
+    target="_blank">
+    <img alt="Simbología y sistema de puntuación"
+         class="imagen"
+         src="https://img.asmedia.epimg.net/resizer/v2/X7U2SU7TDNGOFOPTPPI25AZVGA.jpg?auth=f8cd42fc855e263606eb02ec2810a560114b5a972013eb1aa7e48ddbc84022be&width=644&height=362&focal=658%2C159"
+         width="400" height="400"></a></div>
+<br>
+<a
+  href="https://sofifa.com/user/36295111/players"
+  target="_blank">
+  <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
+    <ins><em>Encuestas MVP 24/25</em></ins>
+  </div>
+</a>
+<a
+  href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
+  target="_blank">
+  <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
+    <ins><em>Simbología y sistema de puntuación</em></ins>
+  </div>
+</a>
+
 
 <br>
 <hr>
