--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     target="_blank">
     <img alt="FIFA"
          class="imagen"
-         src="FIFA26.jpg"
+         img src="FIFA26.jpg"
          width="400" height="400"></a></div>
 <div style="padding: 10px; float: right; width: 45%; text-align: center;">
   <a
