--- a/index.html
+++ b/index.html
@@ -139,24 +139,14 @@
   </a>
 </div>
 
-
-<a
-  href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
-  target="_blank">
-  <div style="padding: 10px; width: 45%; margin: 0 auto; text-align: center; color: black;">
-    <ins><em>Simbología y sistema de puntuación</em></ins>
-  </div>
-</a>
-
-
   <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
     href="https://sofifa.com/user/36295111/players"
     target="_blank">
     <img alt="FIFA"
          class="imagen"
-         img src="FIFA26.jpg"
-         width="400" height="400"></a></div>
+         <img src="FIFA26.jpg"
+         width="400" height="400"/></a></div>
 <div style="padding: 10px; float: right; width: 45%; text-align: center;">
   <a
     href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
