--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   href="https://sofifa.com/user/36295111/players"
   target="_blank">
   <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
-    <ins><em>Encuestas MVP 24/25</em></ins>
+    <ins><em>Jugadores en EA Sports FC 26</em></ins>
   </div>
 </a>
 <a
