--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          width="400" height="400"></a></div>
 
 <a
-  href="FantasyEFMO.html"
+  href="Prueba.html"
   target="_blank">
   <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
     <em>
