--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html style="background-color:hsla(0,90%,55%,0)" lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E.F.M.O. Boadilla 'B'</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
