--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -488,7 +488,7 @@
       name: 'Agudo',
       scores: [null, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "No convocado", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -587,7 +587,7 @@
       name: 'Infante',
       scores: [null, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "No convocado", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -609,7 +609,7 @@
       name: 'Lucas Lausín',
       scores: [null, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "No convocado", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -675,7 +675,7 @@
       name: 'Javi Pardo',
       scores: [null, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "No convocado", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -686,7 +686,7 @@
       name: 'Mario',
       scores: [null, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "Lesionado", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -708,7 +708,7 @@
       name: 'Rodri de Castro',
       scores: [null, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "Lesionado", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -730,7 +730,7 @@
       name: 'Manu Medina',
       scores: [null, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "No convocado", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
