--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -134,7 +134,7 @@
   // Datos de los jugadores con los minutos jugados en cada partido
   const jugadores = [
     {nombre: "Muestra de la función", goles: 11, asistencias: 3, minutos: [66, 33, 90, 0, 22]},
-    {nombre: "Agudo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Gabri", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Luisja", goles: 0, asistencias: 0, minutos: []},
@@ -143,20 +143,20 @@
     {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Rodri", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Adriano", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Infante", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Molina", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Kito", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Brito", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Pablo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Mario", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0]},
+    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Panizo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Manu de Vicente", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Griñán", goles: 0, asistencias: 0, minutos: []}
   ];
