--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -135,30 +135,30 @@
   const jugadores = [
     {nombre: "Muestra de la función", goles: 11, asistencias: 3, minutos: [66, 33, 90, 0, 22]},
     {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0]},
-    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Martínez", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Adriano", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0]},
+    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90]},
+    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90]},
+    {nombre: "Martínez", goles: 0, asistencias: 0, minutos: [90]},
+    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0]},
+    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0]},
+    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90]},
+    {nombre: "Adriano", goles: 0, asistencias: 0, minutos: [90]},
     {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0]},
-    {nombre: "Molina", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Molina", goles: 0, asistencias: 0, minutos: [45]},
     {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0]},
-    {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Kito", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Brito", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: [90]},
+    {nombre: "Kito", goles: 0, asistencias: 0, minutos: [90]},
+    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21]},
+    {nombre: "Brito", goles: 0, asistencias: 0, minutos: [72]},
+    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: [69]},
     {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0]},
-    {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: [18]},
     {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0]},
-    {nombre: "Panizo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Panizo", goles: 0, asistencias: 0, minutos: [45]},
     {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0]},
-    {nombre: "Manu de Vicente", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Griñán", goles: 0, asistencias: 0, minutos: []}
+    {nombre: "Manu de Vicente", goles: 0, asistencias: 0, minutos: [45]},
+    {nombre: "Griñán", goles: 0, asistencias: 0, minutos: [45]}
   ];
 
   // Generar las tarjetas de los jugadores
