--- a/EncuestasMVP2526.html
+++ b/EncuestasMVP2526.html
@@ -44,7 +44,7 @@
 
   <div style="padding: 10px; float: left; width: 45%; text-align: center;">
     <a
-      
+      href="https://forms.gle/F6u9akCxKyjrq9bn9"
       target="_blank">
       <img alt="Jornada1"
            class="imagen"
@@ -59,7 +59,7 @@
       <img src="Jornada2.jpg" height="333" width="490"/></a></div>
 
   <a
-    
+    href="https://forms.gle/F6u9akCxKyjrq9bn9"
     target="_blank">
     <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
       <em>
