--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -508,9 +508,9 @@
     {
       id: 'player3',
       name: 'Álvaro',
-      scores: [null, null, null],
+      scores: [2, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "(6,5)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -519,9 +519,9 @@
     {
       id: 'player4',
       name: 'Luisja',
-      scores: [null, null, null],
+      scores: [6, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "(7,2)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -530,9 +530,9 @@
     {
       id: 'player5',
       name: 'Martínez',
-      scores: [null, null, null],
+      scores: [3, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "🟨 (6,7)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -563,9 +563,9 @@
     {
       id: 'player8',
       name: 'Rodri',
-      scores: [null, null, null],
+      scores: [2, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "(6,4)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -574,9 +574,9 @@
     {
       id: 'player9',
       name: 'Adriano',
-      scores: [null, null, null],
+      scores: [9, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "(7,8)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -596,9 +596,9 @@
     {
       id: 'player11',
       name: 'Molina',
-      scores: [null, null, null],
+      scores: [4, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "↩️ (6,8)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -618,9 +618,9 @@
     {
       id: 'player13',
       name: 'Zarcero',
-      scores: [null, null, null],
+      scores: [5, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "(7,0)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -629,9 +629,9 @@
     {
       id: 'player14',
       name: 'Kito',
-      scores: [null, null, null],
+      scores: [6, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "🟨 (7,3)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -640,9 +640,9 @@
     {
       id: 'player15',
       name: 'Víctor Jaén',
-      scores: [null, null, null],
+      scores: [2, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "↩️ (6,4)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -651,9 +651,9 @@
     {
       id: 'player16',
       name: 'Brito',
-      scores: [null, null, null],
+      scores: [7, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "🟨↪️ (7,5)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -662,9 +662,9 @@
     {
       id: 'player17',
       name: 'Pablo',
-      scores: [null, null, null],
+      scores: [4, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "🟨↪️ (6,9)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -695,9 +695,9 @@
     {
       id: 'player20',
       name: 'Ogayar',
-      scores: [null, null, null],
+      scores: [1, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "🟨↩️ (6,3)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -717,9 +717,9 @@
     {
       id: 'player22',
       name: 'Panizo',
-      scores: [null, null, null],
+      scores: [4, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "↪️ (6,9)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -739,9 +739,9 @@
     {
       id: 'player24',
       name: 'Manu de Vicente',
-      scores: [null, null, null],
+      scores: [1, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "↪️ (6,3)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
@@ -750,9 +750,9 @@
     {
       id: 'player25',
       name: 'Griñán',
-      scores: [null, null, null],
+      scores: [3, null, null],
       comments: [
-        "-", "-", "-", "-", "-",  "-",
+        "↩️ (6,6)", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-"
