--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -46,7 +46,7 @@
 </a></div>
 <div style="padding: 10px; float: right; width: 45%; text-align: center;">
   <a
-    
+    href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing"
     target="_blank">
     <img alt="Jornada2.jpg"
          class="imagen"
@@ -61,7 +61,7 @@
     </em></div>
 </a>
 <a
-  
+  href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing"
   target="_blank">
   <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
     <em>
