--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -103,7 +103,7 @@
             <li>Gol delantero → +0.3 a +0.5</li>
             <li>Gol mediocampista → +0.5 a +0.7</li>
             <li>Gol defensa → +0.7 a +0.9</li>
-            <li>Gol portero → +1.5+</li>
+            <li>Gol portero → +1.5 o más</li>
             <li>Gol penalti → +0.2 a +0.3</li>
             <li>Penalti provocado → +0.2 a +0.3</li>
             <li>Asistencia → +0.3 a +0.4</li>
