--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Equipo — Mock Movistar Fantasy (UI)</title>
+  <title>Fantasy EFMO</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .glass { background: linear-gradient(135deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02)); }
@@ -11,11 +11,11 @@
     .ok { color: #fff; background: #10b981; padding: 2px 6px; border-radius: 4px; font-size: 0.75rem; }
     .doubt { color: #000; background: #facc15; padding: 2px 6px; border-radius: 4px; font-size: 0.75rem; }
     .score-badge { display: inline-block; min-width: 24px; text-align: center; padding: 2px 4px; border-radius: 4px; font-size: 0.75rem; font-weight: 500; margin-right: 2px; }
-    .score-red { background-color: #dc2626; color: #fff; }
-    .score-gray { background-color: #6b7280; color: #fff; }
-    .score-yellow { background-color: #facc15; color: #000; }
-    .score-green { background-color: #22c55e; color: #fff; }
-    .score-blue { background-color: #38bdf8; color: #000; }
+    .score-red { background-color: #ff3200; color: #fff; }
+    .score-gray { background-color: #d6d6d6; color: #fff; }
+    .score-yellow { background-color: #ffff42; color: #fff; }
+    .score-green { background-color: #23d750; color: #fff; }
+    .score-blue { background-color: #4bffff; color: #fff; }
     .cursor-pointer { cursor: pointer; }
   </style>
 </head>
@@ -23,8 +23,8 @@
   <div class="max-w-6xl mx-auto p-6">
     <header class="flex items-center justify-between mb-6">
       <div>
-        <h1 class="text-2xl font-extrabold">Mi Equipo — Movistar Fantasy (mock)</h1>
-        <p class="text-slate-400 text-sm">Vista de equipo con puntos, estadísticas y estado de lesión</p>
+        <h1 class="text-2xl font-extrabold">E.F.M.O. Boadilla 'B'</h1>
+        <p class="text-slate-400 text-sm">Puntos, estadísticas, y mucho más</p>
       </div>
     </header>
 
@@ -55,7 +55,7 @@
 
           <select id="statusFilter" class="w-full p-2 bg-slate-800 rounded">
             <option value="all">Todos los estados</option>
-            <option value="ok">En forma</option>
+            <option value="ok">Disponible</option>
             <option value="injured">Lesionado</option>
             <option value="doubt">Duda</option>
           </select>
@@ -95,7 +95,7 @@
 
   <script>
     const players = [
-      { id:1, name:'Iker Martínez', pos:'Portero', points:32, minutes:270, goals:0, assists:0, cards:0, matches:3, status:'ok', lastScores:[10,12,10], comments:['Buen partido','','Excelente']},
+      { id:1, name:'Iker Martínez', pos:'Portero', points:32, minutes:270, goals:0, assists:0, cards:0, matches:3, status:'ok', lastScores:[10,12,10,-2], comments:['Buen partido','','Excelente']},
       { id:2, name:'Carlos Vega', pos:'Defensa', points:18, minutes:250, goals:1, assists:0, cards:1, matches:3, status:'doubt', lastScores:[6,5,7], comments:['','','']},
       { id:3, name:'Luis Romero', pos:'Centrocampista', points:45, minutes:300, goals:3, assists:4, cards:0, matches:4, status:'ok', lastScores:[14,15,16], comments:['Muy activo','Gran asistencia','']},
       { id:4, name:'Fernando Díaz', pos:'Delantero', points:58, minutes:360, goals:6, assists:2, cards:1, matches:4, status:'ok', lastScores:[18,20,20], comments:['','Golazo','']},
